--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.0.0",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "material-icons": "^1.13.12",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
