--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
