--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jwt-decode": "^4.0.0",
     "material-icons": "^1.13.12",
     "ngx-mask": "^18.0.0",
+    "pdfmake": "^0.2.12",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -37,6 +38,7 @@
     "@angular/cli": "^17.0.7",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/pdfmake": "^0.2.9",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
