--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "^17.0.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "material-icons": "^1.13.12",
+    "ng2-charts": "^6.0.1",
     "ngx-mask": "^18.0.0",
     "pdfmake": "^0.2.12",
     "popper.js": "^1.16.1",
